minor bugs fixed, light/dark mode added

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -121,10 +121,61 @@
   }
 }
 
-.hero-gradient{
-  background-image: url("/hero/heroGradient.jpeg");
+.hero-gradient {
+  background-image: url("/hero/heroGradient.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  clip-path: polygon(0 0, 100% 0, 100% 18%, 0 66%);
+  clip-path: polygon(0 0, 100% 0, 100% 30%, 0 65%);
+}
+
+@media (max-width: 1280px) {
+  .hero-gradient {
+    clip-path: polygon(0 0, 100% 0, 100% 30%, 0 60%);
+  }
+}
+@media (max-width: 1024px) {
+  .hero-gradient {
+    clip-path: polygon(0 0, 100% 0, 100% 30%, 0 53%);
+  }
+}
+@media (max-width: 768px) {
+  .hero-gradient {
+    clip-path: polygon(0 0, 100% 0, 100% 28%, 0 53%);
+  }
+}
+@media (max-width: 640px) {
+  .hero-gradient {
+    clip-path: polygon(0 0, 100% 0, 100% 26%, 0 53%);
+  }
+}
+
+.header-animation{
+  animation: header-animation 0.5s ease-in-out;
+}
+
+@keyframes header-animation {
+  from{
+    transform: translateY(-60px);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.hero-animation{
+  animation: hero-animation 0.5s ease-in-out;
+}
+
+@keyframes hero-animation {
+  from{
+    transform: translateY(40px);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0px);
+    opacity: 1;
+  }
 }
